--- a/style.css
+++ b/style.css
@@ -87,6 +87,12 @@ button {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+#timer {
+    font-size: 24px;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(95, 0, 0);
+}
+
 .winnerPlayer {
     color: rgb(0, 255, 0);
     text-shadow: 0 0 18px green;
